--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #75787e3f;
   min-height: 100vh;
@@ -22,6 +11,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(20, 19, 19);
+}
+
+
+.App-header span {
+  font-size: 1rem;
+  display: inline;
 }
 
 .App-link {
